--- a/src/container/Styles/mainContainer.css
+++ b/src/container/Styles/mainContainer.css
@@ -1,16 +1,45 @@
-.main-div {
+.container {
    width: 100%;
    height: 100%;
-} 
-.header{
-    display :grid;
-    background-color: antiquewhite;
-    text-align: center;
-}
-.appcontainer{
-    width: auto;
+   display :flex;
+   flex-direction: column;
   
-    height: 700px;
 
-    background-color: burlywood;
+} 
+.font{
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    font-weight: 900; 
+    text-align: center;
+   
 }
+
+.header{
+    display :flex;
+  /* background-color: rgb(187, 187, 57); */
+  border-style: solid;
+  justify-content: center;
+  
+  flex-flow: wrap;
+  
+}
+
+.footer{
+    height: 10vh;
+    display :flex;
+    /* background-color: brown; */
+    border-style: solid;
+    justify-content: center;
+    margin-top: auto;
+    margin-top: 5px;
+  
+   
+   
+}
+
+.heading{
+display: flex;
+justify-content: center;
+}
+
+
