--- a/src/component/styles/ItemCard.css
+++ b/src/component/styles/ItemCard.css
@@ -1,8 +1,8 @@
 .item-wrapper{
     display:flex;
     flex-direction: column;
-    flex-grow: 1 ;
-    flex-basis: auto;
+    /* flex-grow: 1 ;
+    flex-basis: auto; */
 }
 .item-card{
     display: flex;
