--- a/src/component/styles/ItemCard.css
+++ b/src/component/styles/ItemCard.css
@@ -6,11 +6,45 @@
 }
 .item-card{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     /* background-color: rgb(223, 223, 81); */
-    border-style: dotted;
-    border-radius: 10px;
+    border-style: solid;
+    border-radius: 10px 10px 10px 10px;
+    /* border-radius: 10px; */
     margin-left: 5px;
     margin-right: 5px;
-   
+    border-left-style: solid;
+  /* border-left-color: rgb(122, 51, 25); */
+  border-left-width:10px ;
+  /* border-color: rgb(122, 51, 25); */
+    justify-content:space-between;
+
 }
+.border-color-todo{
+    border-color: rgb(122, 51, 25);
+border-left-color: rgb(122, 51, 25);
+}   
+.border-color-onGoing{
+    border-color: rgb(112, 149, 19);
+border-left-color: rgb(112, 149, 19);
+}  
+.border-color-done{
+    border-color: rgb(12, 125, 124);
+border-left-color: rgb(12, 125, 124);
+}  
+
+.item-btn{
+  
+   
+    border-radius: 10px;
+    margin-left: 5px;
+    margin-right: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  
+    
+}
+.h3-text{
+    margin-left: 5px;
+}
+
